Css, get started..

--- a/front/src/features/CreateAccount/CreateAccount.css
+++ b/front/src/features/CreateAccount/CreateAccount.css
@@ -1,5 +1,6 @@
 .form-user {
-    display:flex;
+    color: #222629;
+    display: flex;
     flex-direction: column;
     justify-content: space-around;
     max-width: 450px;
@@ -8,6 +9,8 @@
     border: 1px solid grey;
     border-radius: 7px;
     margin-top: 25px;
+    background: whitesmoke;
+
 }
 #form-user > div {
     margin-bottom: 10px;
