--- a/front/src/index.css
+++ b/front/src/index.css
@@ -16,6 +16,8 @@
       }
 
 body {
+  background: #222629;
+  color: white;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
