--- a/front/src/features/GetStarted/GetStarted.css
+++ b/front/src/features/GetStarted/GetStarted.css
@@ -59,3 +59,14 @@ ul li {
 .free-acc b {
     margin: 0 5px;
 }
+
+@media screen and (max-width: 500px) {
+    .getstarted-body ul {
+        list-style: none!important;
+        margin: auto;
+        padding: 0;
+        display: flex;
+        width: 100%;
+        flex-wrap: wrap;
+    }
+}
